# projection

./: CMakeLists.txt  README.md
code/include/l1/: bucket.hpp  bucket_filter.hpp  condat.hpp  l1.hpp
code/include/l11/: l11.hpp
code/include/l1infty/: Bejar.hpp  heapRows.hpp  heapRowsCols.hpp  heapRowsheapCols.hpp  heapRowsheapColsInv.hpp  l1infty.hpp  naive.hpp  quat.hpp  semismooth.hpp  sortedRows.hpp  sortedRowsCols.hpp  sortedRowsColsInv.hpp
code/include/l1w/: bucket.hpp  bucket_filter.hpp  l1w.hpp  sort.hpp  split.hpp
code/include/utils/: gen.hpp  print.hpp  types.hpp
torch_bind/: projections.cpp  setup.py  test.py
